[porting] take snapshot