@@ -6,6 +6,8 @@ import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLConnection;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
+
 
 public class RsrcURLConnection extends URLConnection {
    private ClassLoader classLoader;
@@ -15,11 +17,13 @@ public class RsrcURLConnection extends URLConnection {
       this.classLoader = classLoader;
    }
 
+   @Override
    public void connect() throws IOException {
    }
 
+   @Override
    public InputStream getInputStream() throws IOException {
-      String file = URLDecoder.decode(super.url.getFile(), "UTF-8");
+      String file = URLDecoder.decode(super.url.getFile(), StandardCharsets.UTF_8);
       InputStream result = this.classLoader.getResourceAsStream(file);
       if (result == null) {
          throw new MalformedURLException("Could not open InputStream for URL '" + super.url + "'");
